refactor swaggger
