# handlers/get.go
@@ -23,7 +23,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
@@ -60,4 +60,3 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 		p.l.Println("[ERROR] serializing product", err)
 	}
 }
-
